# practices

./: README.md
practice 2 (Client-server)/: database.cpp  database.h  main.cpp  server.h  vector.h
practice 2 (Client-server)/database/: structures.h  table.cpp  table.h
practice 3 (Crypto exchange)/: CMakeLists.txt  Dockerfile.database  Dockerfile.exchange  config.json  database_client.py  docker-compose.yaml  main.cpp  models.py  nginx.conf  robots.py  server.cpp  server.py
practice 3 (Crypto exchange)/database/: filework.cpp  hashchain.cpp  parsing.cpp  parsing.h
practice1 (Database)/: database.cpp  database.h  main.cpp  table.cpp  table.h
